--- a/Develop/package.json
+++ b/Develop/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "static-site",
+  "name": "readmegenerator",
   "version": "1.0.0",
-  "description": "",
+  "description": "This will run in the commandline to create a readme file from user answer",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
